--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-eslint": "^10.1.0",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.5.1",
+    "mobx": "^6.3.0",
+    "mobx-react": "^7.1.0",
     "ol": "^6.4.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -17,13 +19,14 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +41,21 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.1.8"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      [
+        "transform-decorators-legacy"
+      ]
     ]
   }
 }
